<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.motechproject</groupId>
    <artifactId>ghana-national-regression</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>ghana-national-regression</name>
    <url>http://maven.apache.org</url>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring.version>3.0.5.RELEASE</spring.version>
        <OPENMRS_PORT>8080</OPENMRS_PORT>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>2.14.0</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>dumbster</groupId>
            <artifactId>dumbster</artifactId>
            <version>1.6</version>
        </dependency>
        <dependency>
            <groupId>net.sourceforge.me4se</groupId>
            <artifactId>me4se</artifactId>
            <version>2.1.4-SNAPSHOT-20040926</version>
        </dependency>
        <dependency>
            <groupId>org.motechproject</groupId>
            <artifactId>ghana-national-xforms</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.motechproject</groupId>
            <artifactId>ghana-national-common</artifactId>
            <version>1.0-SNAPSHOT</version>
            <classifier>resources</classifier>
            <type>zip</type>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.motechproject</groupId>
                    <artifactId>motech-delivery-tools-web</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aop</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aspects</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.1.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.motechproject</groupId>
            <artifactId>motech-delivery-tools-web</artifactId>
            <version>0.3-SNAPSHOT</version>
            <type>war</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.motechproject</groupId>
            <artifactId>ghana-national-web</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>war</type>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <resources>
            <resource>
                <directory>${basedir}/src/main/resources</directory>
            </resource>
            <resource>
                <directory>${project.build.directory}/generated-resources</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>generate-test-resources</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeArtifactIds>motech-delivery-tools-web,ghana-national-web</includeArtifactIds>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <argLine>-XX:MaxPermSize=1024M</argLine>
                    <printSummary>true</printSummary>
                    <excludes>
                        <exclude>**/functional/**/*Test.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <!--FAILSAFE FOR INTEGRATION TESTS-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.9</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <printSummary>true</printSummary>
                    <includes>
                        <include>**/functional/**/*Test.java</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.4</version>
                <executions>
                    <execution>
                        <id>unpack-shared-resources</id>
                        <goals>
                            <goal>unpack-dependencies</goal>
                        </goals>
                        <phase>generate-resources</phase>
                        <configuration>
                            <type>jar</type>
                            <outputDirectory>${project.build.directory}/generated-resources</outputDirectory>
                            <includeArtifactIds>ghana-national-common</includeArtifactIds>
                            <includeGroupIds>org.motechproject</includeGroupIds>
                            <excludeTransitive>true</excludeTransitive>
                            <includes>xforms/**,ghana-national.properties</includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.mortbay.jetty</groupId>
                <artifactId>maven-jetty-plugin</artifactId>
                <version>6.1.26</version>
                <configuration>
                    <stopPort>9999</stopPort>
                    <stopKey>foo</stopKey>
                    <contextHandlers>
                        <contextHandler implementation="org.mortbay.jetty.webapp.WebAppContext">
                            <war>build/openmrs/openmrs.war</war>
                            <contextPath>/openmrs</contextPath>
                        </contextHandler>
                        <contextHandler implementation="org.mortbay.jetty.webapp.WebAppContext">
                            <war>target/lib/motech-delivery-tools-web-0.3-SNAPSHOT.war</war>
                            <contextPath>/deliverytools</contextPath>
                        </contextHandler>
                        <contextHandler implementation="org.mortbay.jetty.webapp.WebAppContext">
                            <war>target/lib/ghana-national-web-1.0-SNAPSHOT.war</war>
                            <contextPath>/ghana-national-web</contextPath>
                        </contextHandler>
                    </contextHandlers>
                </configuration>
                <executions>
                    <execution>
                        <id>start-jetty</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <daemon>true</daemon>
                        </configuration>
                    </execution>
                    <execution>
                        <id>stop-jetty</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>stop</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <executions>
                    <execution>
                        <id>hack-binary</id>
                        <phase>validate</phase>
                        <configuration>
                            <file>${basedir}/lib/epihandy-midp.jar</file>
                            <repositoryLayout>default</repositoryLayout>
                            <groupId>org.motechproject.mforms</groupId>
                            <artifactId>epihandy-midp</artifactId>
                            <version>1.0-SNAPSHOT</version>
                            <packaging>jar</packaging>
                            <generatePom>true</generatePom>
                        </configuration>
                        <goals>
                            <goal>install-file</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>buildNode</id>
            <repositories>
                <repository>
                    <id>motech.nexus</id>
                    <name>Motech Snapshots Repository</name>
                    <url>http://nexus.motechproject.org/content/repositories/snapshots</url>
                    <snapshots>
                        <enabled>true</enabled>
                        <checksumPolicy>warn</checksumPolicy>
                        <updatePolicy>always</updatePolicy>
                    </snapshots>
                </repository>
            </repositories>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>2.9</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <systemPropertyVariables>
                                <functional.test.display>:2</functional.test.display>
                            </systemPropertyVariables>
                            <includes>
                                <include>**/functional/**/*Test.java</include>
                            </includes>
                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
                        </configuration>
                    </plugin>
                </plugins>

            </build>
        </profile>
    </profiles>
</project>
